# grintahub-load-tester

./: .dockerignore  .gitignore  Dockerfile  WINDOWS-SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/evasions/: extra_evasions.js
src-tauri/examples/: test_registration.rs
src-tauri/extensions/2captcha-solver/common/: config.js
src-tauri/src/: bot.rs  commands.rs  lib.rs
src-tauri/src/auth/: client.rs  mod.rs  types.rs
src-tauri/src/browser/: actions.rs  errors.rs  mod.rs  pool.rs  session.rs
src-tauri/src/captcha/: mod.rs  solver.rs  types.rs
src-tauri/src/proxy/: config.rs  forwarder.rs  mod.rs  oxylabs.rs
src-tauri/src/rate/: limiter.rs  mod.rs
src-tauri/src/scheduler/: mod.rs  runner.rs
src-tauri/src/stats/: atomic.rs  mod.rs
src-tauri/src/supervisor/: mod.rs  monitor.rs  zombie.rs
src-tauri/src/web/: auth.rs  mod.rs  routes.rs
src/components/: AccountsPanel.tsx  ConfigPanel.tsx  Controls.tsx  SessionDashboard.tsx  StatusBar.tsx
src/services/: api.ts
src/types/: index.ts
