[package]
name = "grintahub-clicker"
version = "0.1.0"
description = "GrintaHub Clicker - Multi-session browser automation with proxy rotation"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "grintahub-clicker"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grintahub-clicker"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [], optional = true }

[dependencies]
# Desktop (Tauri) - optional, not needed for server-only builds
tauri = { version = "2.9.5", features = ["tray-icon"], optional = true }
tauri-plugin-log = { version = "2", optional = true }

# Web server (for headless server mode)
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with proxy support
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls", "cookies", "gzip", "brotli"] }

# Browser automation (chaser-oxide = chromiumoxide fork with protocol-level stealth)
chaser-oxide = { git = "https://github.com/ccheshirecat/chaser-oxide", features = ["tokio-runtime"], default-features = false }
futures = "0.3"

# Concurrency
dashmap = "6"
parking_lot = "0.12"

# Caching
moka = { version = "0.12", features = ["future"] }

# Scheduling
tokio-cron-scheduler = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
url = "2"
urlencoding = "2"
base64 = "0.22"
rand = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "6"

[features]
default = ["desktop", "custom-protocol"]
desktop = ["dep:tauri", "dep:tauri-plugin-log", "dep:tauri-build"]
custom-protocol = ["desktop", "tauri/custom-protocol"]
